--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,60 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
 .App-header {
+  text-align: center;
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.display {
+  height: 200px;
+  background-color: #000;
+  width: 100%;
+}
+
+.display p {
+  font-size: 40px;
+  margin: 5px;
+  color: #fff;
+  text-align: right;
+
+}
+
+.calculator-body {
+  width: fit-content;
+  margin: auto;
+}
+
+.button {
+  display: block;
+  background-color: #000;
+}
+
+button {
+  border: solid 0.5px #000;
+  margin: 5px;
+  color: #fff;
+  font-weight: 300;
+  background-color: #333;
+  border-radius: 50%;
+  width: 99px;
+  height: 99px;
+  font-size: 30px;
+}
+
+.specialButton {
+  border-radius: 50px;
+  width: 207px;
+  height: 99px;
+  margin: 5px;
+  font-size: 30px;
+}
+.calculate {
+  background-color: #fb9328;
+}
+.topbutton {
+  background-color: #a3a3a3;
+  color: #000;
 }
